# storage/api-docs/api-docs.json
@@ -47,6 +47,33 @@
                 }
             }
         },
+        "/credit/amount": {
+            "get": {
+                "tags": [
+                    "Credit"
+                ],
+                "summary": "Get user credits amount",
+                "parameters": [
+                    {
+                        "name": "mobile",
+                        "in": "query",
+                        "description": "User mobile",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "requst is sucessful"
+                    },
+                    "401": {
+                        "description": "unauthorized"
+                    }
+                }
+            }
+        },
         "/coupon/apply": {
             "post": {
                 "tags": [
